deploy/prod/activityService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: activity
  name: activity
  namespace: micro-mall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity
  template:
    metadata:
      labels:
        app: activity
    spec:
      serviceAccountName: micro-mall
      containers:
        - name: activity
          image: activity:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: activity-service
  namespace: micro-mall
spec:
  selector:
    app: activity
  type: ClusterIP
  ports:
    - name: tcp
      port: 8081
      targetPort: 8081
      protocol: TCP
