deploy/prod/dtmService.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtm
  namespace: micro-mall
  labels:
    app: dtm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dtm
  template:
    metadata:
      labels:
        app: dtm
    spec:
      serviceAccountName: micro-mall
      containers:
        - name: dtm
          image: yedf/dtm:1.16
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args:
            - /app/dtm/dtm -c=/app/dtm/config/config.yaml;
          volumeMounts:
            - mountPath: /app/dtm/config
              name: config
          ports:
            - containerPort: 36789
              protocol: TCP
              name: http
            - containerPort: 36790
              protocol: TCP
              name: grpc
          livenessProbe:
            httpGet:
              path: /api/ping
              port: 36789
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 36789
              scheme: HTTP
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
      volumes:
        - name: config
          configMap:
            name: dtm-conf


---
apiVersion: v1
kind: Service
metadata:
  name: dtm-service
  namespace: micro-mall
  labels:
    app: dtm
spec:
  ports:
    - port: 36790
      targetPort: 36790
      name: grpc
    - port: 36789
      targetPort: 36789
      name: http
  selector:
    app: dtm
  type: ClusterIP


#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: dtm-ing
#spec:
#  rules:
#    - host: "your-domain.com"
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: dtm-svc
#                port:
#                  number: 36789 # 此处为 http server，grpc server 的设置，请访问 https://kubernetes.github.io/ingress-nginx/examples/grpc/
#  ingressClassName: nginx # 使用了其他的 ingressClassName， 请自行查询
