deploy/prod/gatewayService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
  namespace: micro-mall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: micro-mall
      containers:
        - name: gateway
          image: gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: micro-mall
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - name: tcp
      port: 8082
      targetPort: 8082
      protocol: TCP
