deploy/prod/mysqlService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: micro-mall
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:8.0.30
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim


---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: micro-mall
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None


# test:
# kubectl run -it --rm --image=mysql:8.0.30 --restart=Never mysql-client -- mysql -h mysql -ppassword
