deploy/prod/orderService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order
  name: order
  namespace: micro-mall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      serviceAccountName: micro-mall
      containers:
        - name: order
          image: order:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
          readinessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: micro-mall
spec:
  selector:
    app: order
  type: ClusterIP
  ports:
    - name: tcp
      port: 8083
      targetPort: 8083
      protocol: TCP
