deploy/prod/redisService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: micro-mall
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.4
          ports:
            - containerPort: 6379
          readinessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          livenessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          volumeMounts:
            - name: redis-persistent-storage
              mountPath: /data
      volumes:
        - name: redis-persistent-storage
          persistentVolumeClaim:
            claimName: redis-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: micro-mall
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: tls-redis
      port: 6379
      targetPort: 6379
