deploy/prod/seckillService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seckill
  name: seckill
  namespace: micro-mall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seckill
  template:
    metadata:
      labels:
        app: seckill
    spec:
      serviceAccountName: micro-mall
      containers:
        - name: seckill
          image: seckill:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8084
          readinessProbe:
            tcpSocket:
              port: 8084
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8084
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: seckill-service
  namespace: micro-mall
spec:
  selector:
    app: seckill
  type: ClusterIP
  ports:
    - name: tcp
      port: 8084
      targetPort: 8084
      protocol: TCP
