deploy/prod/stockService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stock
  name: stock
  namespace: micro-mall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock
  template:
    metadata:
      labels:
        app: stock
    spec:
      serviceAccountName: micro-mall
      containers:
        - name: stock
          image: stock:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8085
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              cpu: 700m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  namespace: micro-mall
spec:
  selector:
    app: stock
  type: ClusterIP
  ports:
    - name: tcp
      port: 8085
      targetPort: 8085
      protocol: TCP
